third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/copy_combo_invalid.old.exp

Diagnostics:
error: cannot copy local `s` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_combo_invalid.move:14:9
   │
13 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                       --------
   │                       │    │
   │                       │    previous mutable local borrow
   │                       used by mutable field borrow
14 │         copy s;
   │         ^^^^^^ copied here
15 │         *f;
   │         -- conflicting reference `f` used here

error: cannot copy local `s` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_combo_invalid.move:23:9
   │
22 │         if (cond) f = &mut s else f = other;
   │                       ------ previous mutable local borrow
23 │         copy s;
   │         ^^^^^^ copied here
24 │         *f;
   │         -- conflicting reference `f` used here

error: cannot copy local `s` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_combo_invalid.move:32:9
   │
31 │         if (cond) f = id_mut(&mut s) else f = other;
   │                       --------------
   │                       │      │
   │                       │      previous mutable local borrow
   │                       used by mutable call result
32 │         copy s;
   │         ^^^^^^ copied here
33 │         *f;
   │         -- conflicting reference `f` used here

error: cannot copy local `s` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_combo_invalid.move:40:21
   │
39 │         let f = &mut s.f;
   │                 --------
   │                 │    │
   │                 │    previous mutable local borrow
   │                 used by mutable field borrow
40 │         if (cond) { copy s; };
   │                     ^^^^^^ copied here
41 │         *f;
   │         -- conflicting reference `f` used here
